--- a/templates/index.html
+++ b/templates/index.html
@@ -95,12 +95,18 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>I am a recent graduate from the University of Michigan’s Industrial and Operations Engineering Master’s
+                program. This past year, I have been working on the
+                <a href="https://www.coursera.org/specializations/data-science-python" target="_blank">Applied Data Science with Python Specialization </a>
+                on <a href="https://www.coursera.org" target="_blank">Coursera.org</a>.
+                <br>
+                <br>
+                I primarily work in Python with extensive knowledge using packages such as Numpy, Pandas, and
+                Scikit-Learn, but also have experience with R and Matlab.
+                <br>
+                <br>
+                Outside of the realm of data science, I also enjoy travelling, wilderness backpacking, running, and going
+                to new restaurants.
             </p>
 
             <div class="row">
@@ -109,19 +115,16 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
-                     </span><br>
-						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+						   <span>Filip Jankovic</span><br>
+						   <span>(248) 703-5340</span><br>
+                     <span>filipj@umich.edu</span>
 					   </p>
 
                </div>
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="/resume" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -629,21 +632,18 @@
 
                      <li>
                         <blockquote>
-                           <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-                           to do what you believe is great work. And the only way to do great work is to love what you do.
-                           If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+                           <p>“Why is it that when one man builds a wall, the next man immediately needs to know what's on the other side?”
                            </p>
-                           <cite>Steve Jobs</cite>
+                           <cite>Tyrion Lannister</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
                      <li>
                         <blockquote>
-                           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                           Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                           nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+                           <p>I have no special talent. I am only passionately curious.
+
                            </p>
-                           <cite>Mr. Adobe</cite>
+                           <cite>Albert Einstein</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
