--- a/templates/index.html
+++ b/templates/index.html
@@ -60,8 +60,7 @@
             <h1 class="responsive-headline">Hi, I'm Filip Jankovic</h1>
              <h3>I'm a Data Scientist looking for challenging problems
                  to solve using my skills in statistical analysis, visualization, and machine learning.<br>
-            <a class="smoothscroll" href="#about">Scroll down</a> to learn more <a class="smoothscroll" href="#about">about me</a> and
-            <a class="smoothscroll" href="#portfolio">my work.</a></h3>
+            <a class="smoothscroll" href="#about">Scroll down</a> to learn more.
             <hr />
             <ul class="social">
                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
@@ -87,7 +86,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src='{{ url_for('static', filename='images/profilepic.jpg') }}' alt='' />
+            <img class="profile-pic"  src='{{ url_for('static', filename='images/profile_pic.jpg') }}' alt='' />
 
          </div>
 
@@ -101,12 +100,18 @@
                 on <a href="https://www.coursera.org" target="_blank">Coursera.org</a>.
                 <br>
                 <br>
-                I primarily work in Python with extensive knowledge using packages such as Numpy, Pandas, and
-                Scikit-Learn, but also have experience with R and Matlab.
+                I primarily work in Python with extensive knowledge of packages such as
+                <a href="http://www.numpy.org/" target="_blank">Numpy</a>,
+                <a href="http://pandas.pydata.org/index.html" target="_blank">Pandas</a> and
+                <a href="http://scikit-learn.org/stable/" target="_blank">Scikit-Learn</a>
+                but also have experience with R and Matlab.
                 <br>
                 <br>
-                Outside of the realm of data science, I also enjoy travelling, wilderness backpacking, running, and going
-                to new restaurants.
+                Outside of the realm of data science, I also enjoy travelling, wilderness backpacking, running, and exploring
+                new food.
+                <br>
+                <br>
+                If you would like to get in touch, please email me at filipj@umich.edu.
             </p>
 
             <div class="row">
