--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -52,7 +52,7 @@ header .banner {
    vertical-align: middle;
    margin: 0 auto;
    width: 85%;
-   padding-bottom: 30px;s
+   padding-bottom: 30px;
    text-align: center;
 }
 
@@ -665,8 +665,8 @@ call-to-action .button {
    font-family: 'FontAwesome';
    content: "\f10d";
 	padding-right: 10px;
-	font-size: 72px;
-   line-height: 72px;
+	font-size: 60px;
+   line-height: 60px;
    text-align: left;
    float: left;
    color: #fff;
@@ -710,6 +710,8 @@ call-to-action .button {
 .slides li { margin: 0; padding: 0;}
 
 /* Necessary Styles */
+
+
 .flexslider {
    position: relative;
    zoom: 1;
