--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
              <h3>I'm a Data Scientist looking for challenging problems
                  to solve using my skills in statistical analysis, visualization, and machine learning.<br>
             <a class="smoothscroll" href="#about">Scroll down</a> to learn more.
-             </h3>>
+             </h3>
             <ul class="social">
                <li><a href="https://www.linkedin.com/in/fjankovic/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://github.com/filipj8" target="_blank"><i class="fa fa-github"></i></a></li>
@@ -116,16 +116,16 @@
 
             <div class="row">
 
-               <div class="columns contact-details">
-
-                  <h2>Contact Details</h2>
-                  <p class="address">
-						   <span>Filip Jankovic</span><br>
-						   <span>(248) 703-5340</span><br>
-                     <span>filipj@umich.edu</span>
-					   </p>
-
-               </div>
+{#               <div class="columns contact-details">#}
+{##}
+{#                  <h2>Contact Details</h2>#}
+{#                  <p class="address">#}
+{#						   <span>Filip Jankovic</span><br>#}
+{#						   <span>(248) 703-5340</span><br>#}
+{#                     <span>filipj@umich.edu</span>#}
+{#					   </p>#}
+{##}
+{#               </div>#}
 
                <div class="columns download">
                   <p>
@@ -295,17 +295,17 @@
             <h1>Check Out Some of My Works.</h1>
 
             <!-- portfolio-wrapper -->
-            <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+            <div id="portfolio-wrapper" class="bgrid-thirds s-bgrid-thirds cf">
 
           	   <div class="columns portfolio-item">
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
-                        <img alt="" src='{{ url_for('static', filename='images/portfolio/coffee.jpg') }}'>
+                        <img alt="" src='{{ url_for('static', filename='images/portfolio/iris.jpg') }}'>
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Coffee</h5>
-                              <p>Illustrration</p>
+          					      <h5>Pandas/Seaborn</h5>
+                              <p>Notebook</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -399,40 +399,6 @@
                   </div>
           		</div> <!-- item end -->
 
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-07" title="">
-                        <img alt="" src='{{ url_for('static', filename='images/portfolio/origami.jpg') }}'>
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-          					      <h5>Origami</h5>
-                              <p>Illustrration</p>
-          					   </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-          		</div> <!-- item end -->
-
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-08" title="">
-                        <img alt="" src='{{ url_for('static', filename='images/portfolio/retrocam.jpg') }}'>
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-          					      <h5>Retrocam</h5>
-                              <p>Web Development</p>
-          					   </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-          		</div>  <!-- item end -->
-
             </div> <!-- portfolio-wrapper end -->
 
          </div> <!-- twelve columns end -->
@@ -443,16 +409,16 @@
 
          <div id="modal-01" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-coffee.jpg') }}' alt="" />
+		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-iris.jpg') }}' alt="" />
 
 		      <div class="description-box">
-			      <h4>Coffee Cup</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+			      <h4>Visualization in Pandas and Seaborn</h4>
+			      <p>Notebook for a video tutorial on visualization in Pandas and Seaborn from Applied Plotting and Charting in Python</p>
+               <span class="categories"><i class="fa fa-tag"></i>Pandas, Seaborn</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
+               <a href="/pandasseaborn">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -543,41 +509,6 @@
 
 	      </div><!-- modal-06 End -->
 
-         <div id="modal-07" class="popup-modal mfp-hide">
-
-		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-origami.jpg') }}' alt="" />
-
-		      <div class="description-box">
-			      <h4>Origami</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Illustration</span>
-		      </div>
-
-            <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-		         <a class="popup-modal-dismiss">Close</a>
-            </div>
-
-	      </div><!-- modal-07 End -->
-
-         <div id="modal-08" class="popup-modal mfp-hide">
-
-		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-retrocam.jpg') }}' alt="" />
-
-		      <div class="description-box">
-			      <h4>Retrocam</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Webdesign, Photography</span>
-		      </div>
-
-            <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-		         <a class="popup-modal-dismiss">Close</a>
-            </div>
-
-	      </div><!-- modal-01 End -->
-
-
       </div> <!-- row End -->
 
    </section> <!-- Portfolio Section End-->
@@ -633,6 +564,16 @@
                <div class="flexslider" style="height: 174px;">
 
                   <ul class="slides">
+
+
+                     <li>
+                        <blockquote>
+                           <p>The greatest value of a picture is when it forces us to notice what we never expected to see.
+
+                           </p>
+                           <cite>John Tukey</cite>
+                        </blockquote>
+                     </li> <!-- slide ends -->
 
                      <li>
                         <blockquote>
