added classifier viz, regex, sentiment analysis notebooks

--- a/templates/index.html
+++ b/templates/index.html
@@ -321,8 +321,8 @@
                         <img alt="" src='{{ url_for('static', filename='images/portfolio/console.jpg') }}'>
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Console</h5>
-                              <p>Web Development</p>
+          					      <h5>Classifier Visualization</h5>
+                              <p>Notebook</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -335,11 +335,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
-                        <img alt="" src='{{ url_for('static', filename='images/portfolio/judah.jpg') }}'>
+                        <img alt="" src='{{ url_for('static', filename='images/portfolio/regex.jpg') }}'>
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Judah</h5>
-                              <p>Webdesign</p>
+          					      <h5>Pandas Regex</h5>
+                              <p>Notebook</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -352,11 +352,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
-                        <img alt="" src='{{ url_for('static', filename='images/portfolio/into-the-light.jpg') }}'>
+                        <img alt="" src='{{ url_for('static', filename='images/portfolio/phone.jpg') }}'>
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Into The Light</h5>
-                              <p>Photography</p>
+          					      <h5>Sentiment Analysis on Amazon's Unlocked Phone Reviews</h5>
+                              <p>Notebook</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -413,7 +413,8 @@
 
 		      <div class="description-box">
 			      <h4>Visualization in Pandas and Seaborn</h4>
-			      <p>Notebook for a video tutorial on visualization in Pandas and Seaborn from Applied Plotting and Charting in Python</p>
+			      <p>Notebook for a video tutorial on visualization in pandas and Seaborn from Applied Plotting and
+                      Charting in Python.</p>
                <span class="categories"><i class="fa fa-tag"></i>Pandas, Seaborn</span>
 		      </div>
 
@@ -429,13 +430,14 @@
 		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-console.jpg') }}' alt="" />
 
 		      <div class="description-box">
-			      <h4>Console</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>
+			      <h4>Classifier Visualization</h4>
+			      <p>Notebook for visualizing different machine learning classification algorithms from Applied Machine
+                      Learning in Python.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Scikit-Learn, Machine Learning</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
+               <a href="/classifiervisualization">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -443,16 +445,17 @@
 
          <div id="modal-03" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-judah.jpg') }}' alt="" />
+		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-regex.jpg') }}' alt="" />
 
 		      <div class="description-box">
-			      <h4>Judah</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding</span>
+			      <h4>Pandas Regex</h4>
+			      <p>Notebook for a video tutorial on regular expressions in pandas from Applied Text
+                      Mining in Python.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Regex, Pandas</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
+               <a href="/pandasregex">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -460,16 +463,17 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-intothelight.jpg') }}' alt="" />
+		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/phone.jpg') }}' alt="" />
 
 		      <div class="description-box">
-			      <h4>Into the Light</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Photography</span>
+			      <h4>Sentiment Analysis on Amazon's Unlocked Phone Reviews</h4>
+			      <p>Notebook for a video tutorial on Sentiment Analysis with Scikit-Learn from Applied Text
+                      Mining in Python.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Sentiment Analysis, Scikit-Learn</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
+               <a href="/sentiment">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
