added network viz

--- a/templates/index.html
+++ b/templates/index.html
@@ -369,11 +369,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-05" title="">
-                        <img alt="" src='{{ url_for('static', filename='images/portfolio/farmerboy.jpg') }}'>
+                        <img alt="" src='{{ url_for('static', filename='images/portfolio/network.jpg') }}'>
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Farmer Boy</h5>
-                              <p>Branding</p>
+          					      <h5>Network Visualization with NetworkX</h5>
+                              <p>Notebook</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -481,16 +481,17 @@
 
          <div id="modal-05" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-farmerboy.jpg') }}' alt="" />
+		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-network.jpg') }}' alt="" />
 
 		      <div class="description-box">
-			      <h4>Farmer Boy</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+			      <h4>Network Visualization with NetworkX</h4>
+			      <p>Notebook for a video tutorial on Network Visualization with NetworkX from Applied Social Network
+                      Analysis in Python.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Networks, NetworkX</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
+               <a href="/networkviz">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
