added interactive visualization

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">Hi, I'm Filip Jankovic</h1>
+            <h1 class="responsive-headline">Filip Jankovic</h1>
              <h3>I'm a Data Scientist looking for challenging problems
                  to solve using my skills in statistical analysis, visualization, and machine learning.<br>
             <a class="smoothscroll" href="#about">Scroll down</a> to learn more.
@@ -386,11 +386,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-06" title="">
-                        <img alt="" src='{{ url_for('static', filename='images/portfolio/girl.jpg') }}'>
+                        <img alt="" src='{{ url_for('static', filename='images/portfolio/bokeh.jpg') }}'>
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Girl</h5>
-                              <p>Photography</p>
+          					      <h5>Interactive Clustering Example</h5>
+                              <p>Interactive Visualization</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -499,16 +499,16 @@
 
          <div id="modal-06" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-girl.jpg') }}' alt="" />
+		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-bokeh.jpg') }}' alt="" />
 
 		      <div class="description-box">
-			      <h4>Girl</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Photography</span>
+			      <h4>Clustering Visualization</h4>
+			      <p>Interactive clustering visualization using bokeh server.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Clustering, Bokeh</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
+               <a href="http://localhost:5006/clustering">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -552,62 +552,62 @@
 
    <!-- Testimonials Section
    ================================================== -->
-   <section id="testimonials">
-
-      <div class="text-container">
-
-         <div class="row">
-
-            <div class="two columns header-col">
-
-               <h1><span>Quotes</span></h1>
-
-            </div>
-
-            <div class="ten columns flex-container">
-
-               <div class="flexslider" style="height: 174px;">
-
-                  <ul class="slides">
-
-
-                     <li>
-                        <blockquote>
-                           <p>The greatest value of a picture is when it forces us to notice what we never expected to see.
-
-                           </p>
-                           <cite>John Tukey</cite>
-                        </blockquote>
-                     </li> <!-- slide ends -->
-
-                     <li>
-                        <blockquote>
-                           <p>“Why is it that when one man builds a wall, the next man immediately needs to know what's on the other side?”
-                           </p>
-                           <cite>Tyrion Lannister</cite>
-                        </blockquote>
-                     </li> <!-- slide ends -->
-
-                     <li>
-                        <blockquote>
-                           <p>I have no special talent. I am only passionately curious.
-
-                           </p>
-                           <cite>Albert Einstein</cite>
-                        </blockquote>
-                     </li> <!-- slide ends -->
-
-                  </ul>
-
-               </div> <!-- div.flexslider ends -->
-
-            </div> <!-- div.flex-container ends -->
-
-         </div> <!-- row ends -->
-
-       </div>  <!-- text-container ends -->
-
-   </section> <!-- Testimonials Section End-->
+{#   <section id="testimonials">#}
+{##}
+{#      <div class="text-container">#}
+{##}
+{#         <div class="row">#}
+{##}
+{#            <div class="two columns header-col">#}
+{##}
+{#               <h1><span>Quotes</span></h1>#}
+{##}
+{#            </div>#}
+{##}
+{#            <div class="ten columns flex-container">#}
+{##}
+{#               <div class="flexslider" style="height: 174px;">#}
+{##}
+{#                  <ul class="slides">#}
+{##}
+{##}
+{#                     <li>#}
+{#                        <blockquote>#}
+{#                           <p>The greatest value of a picture is when it forces us to notice what we never expected to see.#}
+{##}
+{#                           </p>#}
+{#                           <cite>John Tukey</cite>#}
+{#                        </blockquote>#}
+{#                     </li> <!-- slide ends -->#}
+{##}
+{#                     <li>#}
+{#                        <blockquote>#}
+{#                           <p>“Why is it that when one man builds a wall, the next man immediately needs to know what's on the other side?”#}
+{#                           </p>#}
+{#                           <cite>Tyrion Lannister</cite>#}
+{#                        </blockquote>#}
+{#                     </li> <!-- slide ends -->#}
+{##}
+{#                     <li>#}
+{#                        <blockquote>#}
+{#                           <p>I have no special talent. I am only passionately curious.#}
+{##}
+{#                           </p>#}
+{#                           <cite>Albert Einstein</cite>#}
+{#                        </blockquote>#}
+{#                     </li> <!-- slide ends -->#}
+{##}
+{#                  </ul>#}
+{##}
+{#               </div> <!-- div.flexslider ends -->#}
+{##}
+{#            </div> <!-- div.flex-container ends -->#}
+{##}
+{#         </div> <!-- row ends -->#}
+{##}
+{#       </div>  <!-- text-container ends -->#}
+{##}
+{#   </section> <!-- Testimonials Section End-->#}
 
 
    <!-- Contact Section
