added back button to notebooks

--- a/templates/classifiervisualization.html
+++ b/templates/classifiervisualization.html
@@ -11768,6 +11768,7 @@ div#notebook {
     </script>
     <!-- End of mathjax configuration --></head>
 <body>
+<button type="button" onclick="javascript:history.back()">Back</button>
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
