--- a/templates/index.html
+++ b/templates/index.html
@@ -408,9 +408,9 @@
 	      --------------------------------------------------------------- -->
 
          <div id="modal-01" class="popup-modal mfp-hide">
-
-		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-iris.jpg') }}' alt="" />
-
+              <a href="/pandasseaborn">
+		       <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-iris.jpg') }}' alt="" />
+              </a>
 		      <div class="description-box">
 			      <h4>Visualization in Pandas and Seaborn</h4>
 			      <p>Notebook for a video tutorial on visualization in pandas and Seaborn from Applied Plotting and
@@ -419,16 +419,16 @@
 		      </div>
 
             <div class="link-box">
-               <a href="/pandasseaborn">Details</a>
+               <a href="/pandasseaborn">Go to Notebook</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
 	      </div><!-- modal-01 End -->
 
          <div id="modal-02" class="popup-modal mfp-hide">
-
-		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-console.jpg') }}' alt="" />
-
+              <a href="/classifiervisualization">
+		       <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-console.jpg') }}' alt="" />
+              </a>
 		      <div class="description-box">
 			      <h4>Classifier Visualization</h4>
 			      <p>Notebook for visualizing different machine learning classification algorithms from Applied Machine
@@ -437,16 +437,16 @@
 		      </div>
 
             <div class="link-box">
-               <a href="/classifiervisualization">Details</a>
+               <a href="/classifiervisualization">Go to Notebook</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
 	      </div><!-- modal-02 End -->
 
          <div id="modal-03" class="popup-modal mfp-hide">
-
-		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-regex.jpg') }}' alt="" />
-
+              <a href="/pandasregex">
+		       <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-regex.jpg') }}' alt="" />
+              </a>
 		      <div class="description-box">
 			      <h4>Pandas Regex</h4>
 			      <p>Notebook for a video tutorial on regular expressions in pandas from Applied Text
@@ -455,7 +455,7 @@
 		      </div>
 
             <div class="link-box">
-               <a href="/pandasregex">Details</a>
+               <a href="/pandasregex">Go to Notebook</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -463,7 +463,9 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/phone.jpg') }}' alt="" />
+		      <a href="/sentiment">
+                  <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/phone.jpg') }}' alt="" />
+              </a>
 
 		      <div class="description-box">
 			      <h4>Sentiment Analysis on Amazon's Unlocked Phone Reviews</h4>
@@ -473,7 +475,7 @@
 		      </div>
 
             <div class="link-box">
-               <a href="/sentiment">Details</a>
+               <a href="/sentiment">Go to Notebook</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -481,8 +483,9 @@
 
          <div id="modal-05" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-network.jpg') }}' alt="" />
-
+              <a href="/networkviz">
+                  <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-network.jpg') }}' alt="" />
+              </a>
 		      <div class="description-box">
 			      <h4>Network Visualization with NetworkX</h4>
 			      <p>Notebook for a video tutorial on Network Visualization with NetworkX from Applied Social Network
@@ -491,7 +494,7 @@
 		      </div>
 
             <div class="link-box">
-               <a href="/networkviz">Details</a>
+               <a href="/networkviz">Go to Notebook</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -499,8 +502,9 @@
 
          <div id="modal-06" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-bokeh.jpg') }}' alt="" />
-
+              <a href="http://localhost:5006/clustering">
+                  <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-bokeh.jpg') }}' alt="" />
+              </a>
 		      <div class="description-box">
 			      <h4>Clustering Visualization</h4>
 			      <p>Interactive clustering visualization using bokeh server.</p>
@@ -508,7 +512,7 @@
 		      </div>
 
             <div class="link-box">
-               <a href="http://localhost:5006/clustering">Details</a>
+               <a href="http://localhost:5006/clustering">Open Visualization</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
