--- a/static/css/media-queries.css
+++ b/static/css/media-queries.css
@@ -112,7 +112,7 @@
 	   width: 48px;
 		height: 48px;
 		text-align: left;
-		background-color: #CC5200;
+		background-color: rgba(0, 0, 0, 0.5);
 		position: relative;
       border: none;
       float: right;
