added bokeh server to app

--- a/templates/index.html
+++ b/templates/index.html
@@ -502,7 +502,7 @@
 
          <div id="modal-06" class="popup-modal mfp-hide">
 
-              <a href="http://localhost:5006/clustering">
+              <a href="/interactive">
                   <img class="scale-with-grid" src='{{ url_for('static', filename='images/portfolio/modals/m-bokeh.jpg') }}' alt="" />
               </a>
 		      <div class="description-box">
@@ -512,7 +512,7 @@
 		      </div>
 
             <div class="link-box">
-               <a href="http://localhost:5006/clustering">Open Visualization</a>
+               <a href="/interactive">Open Visualization</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
