added sklearn interactive viz

--- a/templates/bokeh.html
+++ b/templates/bokeh.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <body>
     <div>
-        <h2><a href="/">Home</a>
+        <button type="button" onclick="javascript:history.back()">Back</button>
     </div>
     <div class="bk-root">
       {{ bokeh_script|safe }}
