--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -179,7 +179,7 @@ ul#nav li a {
 }
 
 ul#nav li a:active { background-color: transparent !important; }
-ul#nav li.current a { color: #1c6fbb; }
+ul#nav li.current a { color: #0074e0; }
 
 
 /* ------------------------------------------------------------------ */
@@ -207,8 +207,8 @@ ul#nav li.current a { color: #1c6fbb; }
 }
 #about .profile-pic {
    position: relative;
-   width: 180px;
-   height: 180px;
+   width: 150px;
+   height: 150px;
    border-radius: 100%;
 }
 #about .contact-details { width: 41.66667%; }
@@ -421,6 +421,7 @@ ul#nav li.current a { color: #1c6fbb; }
    letter-spacing: 1px;
    text-align: center;
    margin-bottom: 48px;
+   margin-left: -28px;
    color: #95A3A3;
 }
 
@@ -456,10 +457,10 @@ ul#nav li.current a { color: #1c6fbb; }
 	-moz-opacity: 0;
 	filter:alpha(opacity=0);
 
-   -webkit-transition: opacity 0.3s ease-in-out;
-	-moz-transition: opacity 0.3s ease-in-out;
-	-o-transition: opacity 0.3s ease-in-out;
-	transition: opacity 0.3s ease-in-out;
+    -webkit-transition: background-color 0.3s ease-in-out;
+	-moz-transition: background-color 0.3s ease-in-out;
+	-o-transition: background-color 0.3s ease-in-out;
+	transition: background-color 0.3s ease-in-out;
 
    /*background: url(../images/overlay-bg.png) repeat;*/
     background-color: rgba(15, 15, 15, 0.66);
@@ -467,7 +468,7 @@ ul#nav li.current a { color: #1c6fbb; }
 }
 .portfolio-item .item-wrap .link-icon {
    display: block;
-   color: rgba(50, 119, 251, 0.6);
+   color: rgba(10, 106, 175, 0.64);
    height: 30px;
    width: 30px;
    font-size: 18px;
@@ -507,9 +508,14 @@ ul#nav li.current a { color: #1c6fbb; }
 /* on hover */
 .portfolio-item:hover .overlay {
 	opacity: 1;
-    background-color: rgba(12, 60, 175, 0.64);
+    background-color: rgba(10, 106, 175, 0.64);
 	-moz-opacity: 1;
 	filter:alpha(opacity=100);
+
+    -webkit-transition: background-color 0.3s ease-in-out;
+	-moz-transition: background-color 0.3s ease-in-out;
+	-o-transition: background-color 0.3s ease-in-out;
+	transition: background-color 0.3s ease-in-out;
 }
 .portfolio-item:hover .link-icon {
    opacity: 1;
@@ -548,7 +554,7 @@ ul#nav li.current a { color: #1c6fbb; }
 }
 .popup-modal .link-box {
    padding: 18px 36px;
-   background: #001863;
+   background: #001c31;
    text-align: left;
 }
 .popup-modal .link-box a {
