--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
 
       <div class="row">
 
-         <div class="three columns">
+         <div class="columns">
 
             <img class="profile-pic"  src='{{ url_for('static', filename='images/profile_pic.jpg') }}' alt='' />
 
@@ -291,7 +291,7 @@
 
          <div class="twelve columns collapsed">
 
-            <h1>Check Out Some of My Works.</h1>
+            <h1>Featured Work</h1>
 
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-thirds s-bgrid-halves cf">
