--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -203,7 +203,8 @@ ul#nav li.current a { color: #0074e0; }
 }
 #about p {
    line-height: 30px;
-   color: #7A7A7A;
+   color: #828282;
+   font-size: 16px;
 }
 #about .profile-pic {
    position: relative;
